# book-python-packaging-intro

./: README.md  pyproject.toml
.github/workflows/: python-package-legacy.yml  python-package-poetry-with-pyarmor.yml  python-package-poetry.yml
appendices/: README.md
appendices/c2-obfuscate-setuppy/: README.md  build_whl_with_pyarmor.sh  setup.py
appendices/c3-obfuscate-poetry/: README.md  build_whl_by_poetry_with_pyarmor.sh  pyproject.toml
appendices/f1-distribute-from-pypi/pytoml-style/: README.md  pyproject.toml
appendices/f1-distribute-from-pypi/pytoml-style/open_meteo_weather_sample_jpcity/: open_meteo_forecast_api.py
appendices/f1-distribute-from-pypi/setuppy-style/: LICENSE  setup.py
appendices/f1-distribute-from-pypi/setuppy-style/open_meteo_weather_sample_jpcity/: __init__.py
appendices/g1-upload-pypi-on-github-actions/: publish-distribution-to-pypi.yml  publish-distribution-to-test-pypi.yml
chapter02/: README.md
chapter02/section2-2/: README.md
chapter02/section2-3-3/: README.md  requirements.txt
chapter02/section2-3-4/: README.md
chapter02/section2-4/: README.md
chapter03/: README.md
docker/: Dockerfile
weatherforecast/: open_meteo_forecast_api.py
